--- a/sqlx-postgresql/Cargo.toml
+++ b/sqlx-postgresql/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.4", features = ["macros"] }
+dotenv = "0.15.0"
 sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres"] }
 tokio = { version = "1.36.0", features = ["full"] }
 tracing = "0.1.40"
