--- a/sqlx-postgresql/Cargo.toml
+++ b/sqlx-postgresql/Cargo.toml
@@ -16,6 +16,6 @@ sqlx = { version = "0.7.3", features = [
 ] }
 tokio = { version = "1.36.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util", "timeout"] }
-tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
+tower-http = { version = "0.5.2", features = ["add-extension", "trace", "cors"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
